src/test/resources/typeerrors/MockComplexTypeMismatch.java
public class MockComplexTypeMismatch {
    TypeA test = new TypeB();
}

class TypeA {

}

class TypeB {

}